# lightninglens-platform

./: .gitignore  README.md  automated_data_processing.sh  browser_ws_test.html  config.env  direct_test.html  docker-compose.yml  enhanced_ws_test.py  fix_permissions.sh  load_environment.sh  migrate-service-to-core.sh  process_data.sh  requirements.txt  restart-services.sh  setup-nodes-continue.sh  setup_base_path.sh  setup_dependencies.sh  setup_environments.sh  simple_ws_test.html  simple_ws_test.py  start-simple-dashboard.sh  start-suggestions-service.sh  start.sh  start_api_servers.sh  start_frontend.sh  start_integrated_api.sh  start_proxy.sh  start_simulation.sh  stop.sh  test_real_data_integration.sh  test_ws_client.py  update-frontend-config.sh  useLightningData.js  useSuggestions.js  websocket_test.py  ws_debug_test.html  ws_test.html
Lightning-Lens/lightning_lens/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
Lightning-Lens/lightning_lens/configs/: config.yaml  test_config.yaml  test_docker.yaml
Lightning-Lens/lightning_lens/core/: README.md  config.js  error-handler.js  health-dashboard.js  logger.js  service-registry.js  websocket-manager.js
Lightning-Lens/lightning_lens/frontend/: package.json  tailwind.config.js
Lightning-Lens/lightning_lens/lightning-docker-testnet/: docker-compose.yml
Lightning-Lens/lightning_lens/scripts/: adapter_proxy.py  archive_predictions.py  auto_generate_predictions.py  auto_learning.py  check_transaction_fields.py  cleanup_data.py  collect_data.py  (+40 more)
(+74 files in other folders)
